enhanced lc to work with old versions as well as new versions